bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: minidrill
    labels:
        com.docker.compose.project: minidrill
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: minidrill
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: minidrill
                com.docker.compose.service: frontend
                com.docker.compose.network.mini-network: "true"
        spec:
            containers:
                - name: mini-frontend
                  image: minidrill-frontend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-5173
                      containerPort: 5173
                  volumeMounts:
                    - name: app
                      mountPath: /app
            volumes:
                - name: app
                  hostPath:
                    path: D:\mini drill\frontend
