bridge/base/backend-expose.yaml
#! backend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend
    namespace: minidrill
    labels:
        com.docker.compose.project: minidrill
        com.docker.compose.service: backend
spec:
    selector:
        com.docker.compose.project: minidrill
        com.docker.compose.service: backend
    ports:
        - name: backend-3001
          port: 3001
          targetPort: backend-3001
