bridge/base/backend-service.yaml
# check if there is at least one published port

#! backend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend-published
    namespace: minidrill
    labels:
        com.docker.compose.project: minidrill
        com.docker.compose.service: backend
spec:
    selector:
        com.docker.compose.project: minidrill
        com.docker.compose.service: backend
    ports:
        - name: backend-3001
          port: 3001
          protocol: TCP
          targetPort: backend-3001

# check if there is at least one published port
