bridge/base/frontend-expose.yaml
#! frontend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend
    namespace: minidrill
    labels:
        com.docker.compose.project: minidrill
        com.docker.compose.service: frontend
spec:
    selector:
        com.docker.compose.project: minidrill
        com.docker.compose.service: frontend
    ports:
        - name: frontend-5173
          port: 5173
          targetPort: frontend-5173
