bridge/base/mini-network-network-policy.yaml
#! mini-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: mini-network-network-policy
    namespace: minidrill
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.mini-network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.mini-network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.mini-network: "true"
